hphp/hack/test/typecheck/yield/asyncgen11.php.exp
File "asyncgen11.php", line 4, characters 3-12:
Invalid `yield` (Typing[4110])
  File "asyncgen11.php", line 3, characters 36-38:
  Expected `int`
  File "asyncgen11.php", line 3, characters 36-38:
  This type argument to `AsyncGenerator` must match exactly (it is invariant)
  File "asyncgen11.php", line 4, characters 9-12:
  But got `?[unresolved]` because `yield x` is equivalent to `yield null => x` in an `async` function
