hphp/hack/test/typecheck/yield/asyncgen11.php
<?hh

async function f(): AsyncGenerator<int, string, void> {
  yield 'hi';
}
